crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__explanation.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "SCOTUS explanation",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "I",
                  "type": "text"
                }
              ],
              "raw_text": "I",
              "span": {
                "end": 184,
                "start": 183
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "read",
                  "type": "text"
                }
              ],
              "raw_text": "read",
              "span": {
                "end": 189,
                "start": 185
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "section",
                  "type": "text"
                }
              ],
              "raw_text": "section",
              "span": {
                "end": 197,
                "start": 190
              },
              "type": "word"
            },
            {
              "content": {
                "content": [
                  {
                    "content": [
                      {
                        "content": "four",
                        "type": "text"
                      }
                    ],
                    "raw_text": "four",
                    "span": {
                      "end": 203,
                      "start": 199
                    },
                    "type": "word"
                  },
                  {
                    "content": [
                      {
                        "content": "b",
                        "type": "text"
                      }
                    ],
                    "form_type": "l",
                    "raw_text": "b@l",
                    "span": {
                      "end": 207,
                      "start": 204
                    },
                    "type": "word"
                  }
                ]
              },
              "scoped_annotations": [
                {
                  "text": "(4)(b)",
                  "type": "explanation"
                }
              ],
              "type": "annotated_group"
            },
            {
              "content": [
                {
                  "content": "yesterday",
                  "type": "text"
                }
              ],
              "raw_text": "yesterday",
              "span": {
                "end": 229,
                "start": 220
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
