crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__form-marker-compound.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "deu",
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "deu, eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "bates",
        "language": "deu, eng",
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "compounds allowed",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "hoo",
                  "type": "text"
                },
                {
                  "content": {
                    "span": {
                      "end": 201,
                      "start": 200
                    }
                  },
                  "type": "compound_marker"
                },
                {
                  "content": "hoo",
                  "type": "text"
                },
                {
                  "content": {
                    "span": {
                      "end": 205,
                      "start": 204
                    }
                  },
                  "type": "compound_marker"
                },
                {
                  "content": "hoo",
                  "type": "text"
                }
              ],
              "form_type": "c",
              "raw_text": "hoo+hoo+hoo@c",
              "span": {
                "end": 210,
                "start": 197
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "hoo",
                  "type": "text"
                },
                {
                  "content": {
                    "span": {
                      "end": 223,
                      "start": 222
                    }
                  },
                  "type": "compound_marker"
                },
                {
                  "content": "hoo",
                  "type": "text"
                },
                {
                  "content": {
                    "span": {
                      "end": 227,
                      "start": 226
                    }
                  },
                  "type": "compound_marker"
                },
                {
                  "content": "hoo",
                  "type": "text"
                }
              ],
              "form_type": "n",
              "raw_text": "hoo+hoo+hoo@n",
              "span": {
                "end": 232,
                "start": 219
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "deu, eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "bates",
        "language": "deu, eng",
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
